--- a/pom.xml
+++ b/pom.xml
@@ -34,11 +34,10 @@
 
 		<!--junit -->
 		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-
 		<!--lang3工具类 -->
 		<dependency>
 			<groupId>org.apache.commons</groupId>
@@ -104,6 +103,13 @@
 			<!-- war部署使用 更改名称 -->
 			<!-- <plugin> <groupId>org.apache.maven.plugins</groupId> <artifactId>maven-war-plugin</artifactId> 
 				<configuration> <warName>ROOT</warName>war默认名称 </configuration> </plugin> -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<skip>true</skip><!--跳过在打包过程中的maven-test环节  -->
+				</configuration>
+			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-dependency-plugin</artifactId>
