--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,11 @@
 	<url>http://maven.apache.org</url>
 
 	<properties>
+		<java.version>1.8</java.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<version.feilong-platform>1.10.3</version.feilong-platform>
+		<maven.compiler.source>${java.version}</maven.compiler.source>
+		<maven.compiler.target>${java.version}</maven.compiler.target>
 	</properties>
 	<repositories>
 		<repository>
