删除 .classpath .project 更新 .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,11 @@
 /target/
 /.settings/
-# logs
+#logs
 /logs
 *.log
 *.log.*
-.settings
+/.settings
+/.classpath
+/.project
+/*.classpath
+/*.project
