增加aop 并且支持多数据源动态切换

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,6 +16,8 @@ server.port=8888
 server.session.timeout=0
 server.tomcat.uri-encoding=UTF-8
 
+spring.aop.auto=true
+
 #MVC config
 spring.mvc.view.prefix=/WEB-INF/
 spring.mvc.view.suffix=.jsp
