--- a/pom.xml
+++ b/pom.xml
@@ -108,6 +108,11 @@
 			<artifactId>druid</artifactId>
 			<version>1.1.0</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-aop</artifactId>
+		</dependency>  
 	</dependencies>
 	<build>
 		<plugins>
